Beginning of refactor of export